--- a/lex-wiki/package.json
+++ b/lex-wiki/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "contextmenu",
-  "title": "contextmenu",
+  "name": "lex-wiki-editor",
+  "title": "Lex-Wiki Editor",
   "id": "jid1-PWvb5d6eoY4YYQ",
   "description": "Lex-Wiki.org add-on",
   "author": "",
