--- a/lex-wiki/package.json
+++ b/lex-wiki/package.json
@@ -6,11 +6,28 @@
   "author": "",
   "license": "MPL 2.0",
   "version": "1.0",	
-  "preferences": [{
+  "preferences": [
+  	{
         "name": "mediaWikiSite",
         "title": "MediaWiki Site",
         "description": "URL of your MediaWiki",
         "type": "string",
         "value": "http://lex-wiki.org"
-    }]
+  	},
+	{
+        "name": "mediaWikiUser",
+        "title": "MediaWiki User",
+        "description": "Username for Mediawiki",
+        "type": "string",
+        "value": "Andrei Radulescu-Banu"
+	},
+	{
+        "name": "mediaWikiPassword",
+        "title": "MediaWiki Password",
+        "description": "Password for Mediawiki",
+        "type": "string",
+        "value": "caftarate"
+	}	
+	   
+    ]
 }
