--- a/lex-wiki/package.json
+++ b/lex-wiki/package.json
@@ -6,6 +6,9 @@
   "author": "",
   "license": "MPL 2.0",
   "version": "1.0",	
+  "permissions": {
+  	"cross-domain-content": ["http://lex-wiki.org/"]
+    	},
   "preferences": [
   	{
         "name": "mediaWikiSite",
