Change install instructions

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "Lex-Wiki.org add-on",
   "author": "Andrei Radulescu-Banu <bitdribble@gmail.com> (http://lex-wiki.org/wiki/User:Andrei_Radulescu-Banu)",
   "license": "CC-BY-SA-4.0",
-  "version": "1.0.3",	
+  "version": "1.0.4",	
+  "private": "true",
   "preferences": [
   	{
         "name": "mediaWikiSite",
